@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-pl ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- [#MODX-2129] Added missing Resource events
 - Fixes to Messages page/grid
 - Added optimize database button on database tables grid
 - Fixed reference bug in resource/update processor
